# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.15.2
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Change EPREFIX_SOURCE default to %{EIX_PREFIX}, see
	  http://bugs.gentoo.org/show_bug.cgi?id=247227

*eix-0.15.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- New match algorithms: --substring (-z), --begin (-b), --end
	- Introduce DEFAULT_MATCH_ALGORITHM. This should avoid some surprises
	  like "eix libstdc++-v3" looking for regular expressions as in
	  http://bugs.gentoo.org/show_bug.cgi?id=245487
	  or "eix @kde" also matching e.g. @kde3 as in
	  http://bugs.gentoo.org/show_bug.cgi?id=245773
	- Introduce DEFAULT_MATCH_FIELD; remove MATCH_.*_IF and MATCH_ORDER.
	- Fix order for <full...> and <=full...>. Slot comes after version.
	- Treat ADD_CACHE_METHOD and ADD_OVERRIDE_CACHE_METHOD only by
	  delayed substitution in CACHE_METHOD or OVERRIDE_CACHE_METHOD.
	  Note that this means that you should now add this delayed
	  substitution to redefinitions of the latter in e.g. /etc/eixrc.
	- Let Replace() in functions-eix.sh act on unexpanded arguments.
	- Only read the first set definition file if the same name occurs in
	  several directories.
	- Fix order in EIX_LOCAL_SETS: list local before global set files.
	- Fix missing includes, http://bugs.gentoo.org/show_bug.cgi?id=246270
	  http://bugs.gentoo.org/show_bug.cgi?id=246222
	- Fix LEVENSHTEIN_DISTANCE (actually honour the variable).
	- Name guards in a more standard manner (no dangerous _* names).
	- Internal change: More convenient argument order in split_string()

*eix-0.15.0
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Allow @set (from EIX_LOCAL_SETS) in /etc/portage/package.keywords.
	  This is more than portage currently does, although it is planned:
	  http://bugs.gentoo.org/show_bug.cgi?id=244366
	- Introduce /etc/portage/sets.eix in the EIX_LOCAL_SETS defaults,
	  and document in the description of that file and in the bug section